# quiz_app

./: package-lock.json  pyproject.toml
quiz_backend/: README.md  main.py  settings.py
quiz_backend/controllers/: auth_controllers.py  user_controllers.py
quiz_backend/db/: db_connector.py
quiz_backend/models/: quiz_models.py
quiz_backend/utils/: errors.py
